# multi-agent-runtime

./: .gitignore  CONTRIBUTING.md  OPEN_SOURCE_CHECKLIST.md  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json
examples/: _shared.mjs  autoresearch.mjs  coding-studio.mjs  opc-solo-company.mjs
rust/: Cargo.toml  README.md
rust/crates/multi-agent-protocol/: Cargo.toml
rust/crates/multi-agent-protocol/src/: events.rs  lib.rs  spec.rs  state.rs  templates.rs  workspace_turn.rs
rust/crates/multi-agent-runtime-claude/: Cargo.toml
rust/crates/multi-agent-runtime-claude/src/: workspace.rs
rust/crates/multi-agent-runtime-claude/tests/: live_claude_e2e.rs  local_restore.rs
rust/crates/multi-agent-runtime-codex/: Cargo.toml
rust/crates/multi-agent-runtime-codex/src/: workspace.rs
rust/crates/multi-agent-runtime-codex/tests/: live_codex_e2e.rs  local_restore.rs
rust/crates/multi-agent-runtime-core/: Cargo.toml
rust/crates/multi-agent-runtime-core/src/: runtime.rs
rust/crates/multi-agent-runtime-cteno/: Cargo.toml
rust/crates/multi-agent-runtime-cteno/src/: adapter.rs
rust/crates/multi-agent-runtime-cteno/tests/: template_e2e.rs
rust/crates/multi-agent-runtime-local/: Cargo.toml
rust/crates/multi-agent-runtime-local/src/: lib.rs
src/: index.ts
src/adapters/claude/: asyncMessageQueue.ts  claudeAgentWorkspace.ts  messageUtils.ts
src/adapters/codex/: codexSdkWorkspace.ts
src/adapters/hybrid/: hybridWorkspace.ts
src/core/: events.ts  localPersistence.ts  providerResolution.ts  runtime.ts  templates.ts  types.ts  workflowExecution.ts  workspaceTurn.ts
src/examples/: hybridClaudeCodex.ts
src/templates/: autoresearch.ts  codingStudio.ts  edictGovernance.ts  opcSoloCompany.ts
tests/: local-persistence.test.mjs
tests/e2e/: _shared.mjs  autoresearch.test.mjs  codex-autoresearch.test.mjs  codex-coding-studio.test.mjs  codex-opc-solo-company.test.mjs  coding-studio.test.mjs  opc-solo-company.test.mjs  template-suite.test.mjs  templateCases.mjs  templateRunner.mjs
