[workspace]
members = [
  "crates/multi-agent-protocol",
  "crates/multi-agent-runtime-core",
  "crates/multi-agent-runtime-cteno",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/zalan159/multi-agent-runtime"
authors = ["zalan159"]

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
