[package]
name = "multi-agent-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Provider-neutral protocol objects and event types for multi-agent workspaces."

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
regex.workspace = true
serde_json.workspace = true
