[package]
name = "multi-agent-runtime-codex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Codex CLI provider adapter for the multi-agent runtime."

[dependencies]
chrono.workspace = true
multi-agent-protocol = { path = "../multi-agent-protocol" }
multi-agent-runtime-core = { path = "../multi-agent-runtime-core" }
multi-agent-runtime-local = { path = "../multi-agent-runtime-local" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "fs"] }
uuid.workspace = true
