[package]
name = "multi-agent-runtime-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Core runtime state machine for role-based multi-agent workspaces."

[dependencies]
chrono.workspace = true
multi-agent-protocol = { path = "../multi-agent-protocol" }
thiserror.workspace = true
uuid.workspace = true
