[package]
name = "multi-agent-runtime-cteno"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Cteno adapter traits and bootstrap flow for the multi-agent runtime."

[dependencies]
async-trait = "0.1"
chrono.workspace = true
multi-agent-protocol = { path = "../multi-agent-protocol" }
multi-agent-runtime-core = { path = "../multi-agent-runtime-core" }
multi-agent-runtime-local = { path = "../multi-agent-runtime-local" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
